--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,13 @@
 {
-    "compilerOptions": {
-      "target": "es6",
-      "module": "commonjs",
-      "outDir": "./dist",
-      "rootDir": "./src",
-      "strict": true,
-      "moduleResolution": "node",
-      "esModuleInterop": true,
-      "skipLibCheck": true,
-      "forceConsistentCasingInFileNames": true,
-      "noImplicitReturns": true,
-      "noFallthroughCasesInSwitch": true,
-      "allowSyntheticDefaultImports": true,
-      "types": ["jest"],
-      "typeRoots": ["./node_modules/@types", "./types"]
-    },
-    "include": ["src/**/*.ts"],
-    "exclude": ["node_modules", "dist"]
+	"compilerOptions": {
+		"module": "commonjs",
+		"target": "ES2019",
+		"esModuleInterop": true,
+		"declaration": true,
+		"outDir": "./dist",
+		"resolveJsonModule": true,
+		"skipLibCheck": true
+	},
+	"include": ["src"],
+	"exclude": ["node_modules", "tests"]
 }
